--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ apply plugin: 'application'
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    // jcenter()
+    mavenLocal()
+    mavenCenter()
 }
 
 dependencies {
