--- a/build.gradle
+++ b/build.gradle
@@ -15,16 +15,17 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     // jcenter()
-    mavenLocal()
-    mavenCenter()
+     mavenLocal()
+     mavenCentral()
+     maven { url 'https://artifacts.alfresco.com/nexus/content/repositories/public' } // 自定义库地址
 }
-
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:20.0'
+    
+	compile group: 'com.google.guava', name: 'guava', version: '22.0'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
