--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,10 @@ dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+	
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    
 	compile group: 'com.google.guava', name: 'guava', version: '22.0'
 
     // Use JUnit test framework
